--- a/app/styles/includes/_helpers.scss
+++ b/app/styles/includes/_helpers.scss
@@ -302,3 +302,7 @@ input.filter {
 .strong {
   font-weight: 700;
 }
+
+.underline {
+  text-decoration: underline;
+}
